增加中邮对账单的接口单元测试；GetMonthBillIncome，ListMonthBankChange，ListMonthIntervalTradeAnalyze

--- a/utils/result_cnpsec.html
+++ b/utils/result_cnpsec.html
@@ -189,8 +189,8 @@ function showOutput(id, name) {
 
 <div class='heading'>
 <h1>测试报告</h1>
-<p class='attribute'><strong>Start Time:</strong> 2020-04-16 18:09:25</p>
-<p class='attribute'><strong>Duration:</strong> 0:00:00.228500</p>
+<p class='attribute'><strong>Start Time:</strong> 2020-04-17 21:48:11</p>
+<p class='attribute'><strong>Duration:</strong> 0:00:00.181500</p>
 <p class='attribute'><strong>Status:</strong> Pass 3</p>
 
 <p class='description'>单元测试报告：</p>
@@ -222,12 +222,12 @@ function showOutput(id, name) {
 </tr>
 
 <tr class='passClass'>
-    <td>Order</td>
-    <td>3</td>
-    <td>3</td>
+    <td>GetMonthBillIncome</td>
+    <td>1</td>
+    <td>1</td>
     <td>0</td>
     <td>0</td>
-    <td><a href="javascript:showClassDetail('c1',3)">Detail</a></td>
+    <td><a href="javascript:showClassDetail('c1',1)">Detail</a></td>
 </tr>
 
 <tr id='pt1.1' class='hiddenRow'>
@@ -254,22 +254,31 @@ pt1.1:
     </td>
 </tr>
 
-<tr id='pt1.2' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_normal_1</div></td>
+<tr class='passClass'>
+    <td>ListMonthBankChange</td>
+    <td>1</td>
+    <td>1</td>
+    <td>0</td>
+    <td>0</td>
+    <td><a href="javascript:showClassDetail('c2',1)">Detail</a></td>
+</tr>
+
+<tr id='pt2.1' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_normal</div></td>
     <td colspan='5' align='center'>
 
     <!--css div popup start-->
-    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt1.2')" >
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt2.1')" >
         pass</a>
 
-    <div id='div_pt1.2' class="popup_window">
+    <div id='div_pt2.1' class="popup_window">
         <div style='text-align: right; color:red;cursor:pointer'>
-        <a onfocus='this.blur();' onclick="document.getElementById('div_pt1.2').style.display = 'none' " >
+        <a onfocus='this.blur();' onclick="document.getElementById('div_pt2.1').style.display = 'none' " >
            [x]</a>
         </div>
         <pre>
         
-pt1.2: 
+pt2.1: 
 
         </pre>
     </div>
@@ -278,22 +287,31 @@ pt1.2:
     </td>
 </tr>
 
-<tr id='pt1.3' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_normal_2</div></td>
+<tr class='passClass'>
+    <td>ListMonthIntervalTradeAnalyze</td>
+    <td>1</td>
+    <td>1</td>
+    <td>0</td>
+    <td>0</td>
+    <td><a href="javascript:showClassDetail('c3',1)">Detail</a></td>
+</tr>
+
+<tr id='pt3.1' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_normal</div></td>
     <td colspan='5' align='center'>
 
     <!--css div popup start-->
-    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt1.3')" >
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt3.1')" >
         pass</a>
 
-    <div id='div_pt1.3' class="popup_window">
+    <div id='div_pt3.1' class="popup_window">
         <div style='text-align: right; color:red;cursor:pointer'>
-        <a onfocus='this.blur();' onclick="document.getElementById('div_pt1.3').style.display = 'none' " >
+        <a onfocus='this.blur();' onclick="document.getElementById('div_pt3.1').style.display = 'none' " >
            [x]</a>
         </div>
         <pre>
         
-pt1.3: 
+pt3.1: 
 
         </pre>
     </div>
