--- a/utils/result_cnpsec.html
+++ b/utils/result_cnpsec.html
@@ -189,8 +189,8 @@ function showOutput(id, name) {
 
 <div class='heading'>
 <h1>测试报告</h1>
-<p class='attribute'><strong>Start Time:</strong> 2020-05-06 21:07:28</p>
-<p class='attribute'><strong>Duration:</strong> 0:00:00.746000</p>
+<p class='attribute'><strong>Start Time:</strong> 2020-05-06 22:50:16</p>
+<p class='attribute'><strong>Duration:</strong> 0:00:01.380956</p>
 <p class='attribute'><strong>Status:</strong> Pass 6 Failure 2</p>
 
 <p class='description'>单元测试报告：</p>
@@ -411,9 +411,9 @@ pt5.1:
         <pre>
         
 ft6.1: Traceback (most recent call last):
-  File "analysis_cnpsec.py", line 232, in test_normal
+  File ".\analysis_cnpsec.py", line 260, in test_normal
     sql=sql, url=url, data=data, count=sql_count[0], is_timestamp=True)
-  File "analysis_cnpsec.py", line 446, in _checking
+  File ".\analysis_cnpsec.py", line 474, in _checking
     self.assertAlmostEqual(sql_data[column_index], round(decimal.Decimal(interface_data), 4), msg=msg)
 AssertionError: Decimal('1556640000.000000') != Decimal('1559232000.0000') within 7 places : 
 SQL is
@@ -429,9 +429,9 @@ Interface response is
 Current is checking column init_date
 
 Traceback (most recent call last):
-  File "analysis_cnpsec.py", line 232, in test_normal
+  File ".\analysis_cnpsec.py", line 260, in test_normal
     sql=sql, url=url, data=data, count=sql_count[0], is_timestamp=True)
-  File "analysis_cnpsec.py", line 446, in _checking
+  File ".\analysis_cnpsec.py", line 474, in _checking
     self.assertAlmostEqual(sql_data[column_index], round(decimal.Decimal(interface_data), 4), msg=msg)
 AssertionError: Decimal('1556640000.000000') != Decimal('1559232000.0000') within 7 places : 
 SQL is
@@ -513,9 +513,9 @@ pt7.1:
         <pre>
         
 ft8.1: Traceback (most recent call last):
-  File "analysis_cnpsec.py", line 373, in test_normal
+  File ".\analysis_cnpsec.py", line 401, in test_normal
     count=len(sql_result_dealed), is_timestamp=False, is_cumulative_rate=True)
-  File "analysis_cnpsec.py", line 430, in _checking
+  File ".\analysis_cnpsec.py", line 458, in _checking
     self.assertEqual(params.get("count"), interface_result.get("count"), msg=msg_model)
 AssertionError: 28 != 29 : 
 SQL is
@@ -529,9 +529,9 @@ Interface response is
     SQL result is
 [[20190502, Decimal('0.7050'), Decimal('0.7050'), Decimal('0.7050'), Decimal('0.7050'), Decimal('0.7050'), Decimal('0.7050'), Decimal('0.7050'), Decimal('0.7050'), Decimal('74.000'), Decimal('74.000'), Decimal('74.000'), Decimal('74.000')], [20190503, Decimal('0.7050'), Decimal('0.7050'), Decimal('0.7050'), Decimal('0.7050'), Decimal('1.9070'), Decimal('1.9070'), Decimal('1.9070'), Decimal('1.9070'), Decimal('1.000'), Decimal('1.000'), Decimal('1.000'), Decimal('1.000')], [20190504, Decimal('0.7050'), Decimal('0.7050'), Decimal('0.7050'), Decimal('0.7050'), Decimal('3.9564'), Decimal('3.9564'), Decimal('3.9564'), Decimal('3.9564'), Decimal('1.000'), Decimal('1.000'), Decimal('1.000'), Decimal('1.000')], [20190505, Decimal('0.7051'), Decimal('0.7051'), Decimal('0.7051'), Decimal('0.7051'), Decimal('7.4512'), Decimal('7.4512'), Decimal('7.4512'), Decimal('7.4512'), Decimal('1.000'), Decimal('1.000'), Decimal('1.000'), Decimal('1.000')], [20190508, Decimal('0.7051'), Decimal('0.7051'), Decimal('0.7051'), Decimal('0.7051'), Decimal('13.4101'), Decimal('13.4101'), Decimal('13.4101'), Decimal('13.4101'), Decimal('3.000'), Decimal('3.000'), Decimal('3.000'), Decimal('3.000')], [20190509, Decimal('0.7051'), Decimal('0.7051'), Decimal('0.7051'), Decimal('0.7051'), Decimal('23.5707'), Decimal('23.5707'), Decimal('23.5707'), Decimal('23.5707'), Decimal('1.000'), Decimal('1.000'), Decimal('1.000'), Decimal('1.000')], [20190510, Decimal('0.7051'), Decimal('0.7051'), Decimal('0.7051'), Decimal('0.7051'), Decimal('40.8955'), Decimal('40.8955'), Decimal('40.8955'), Decimal('40.8955'), Decimal('1.000'), Decimal('1.000'), Decimal('1.000'), Decimal('1.000')], [20190511, Decimal('0.7051'), Decimal('0.7051'), Decimal('0.7051'), Decimal('0.7051'), Decimal('70.4360'), Decimal('70.4360'), Decimal('70.4360'), Decimal('70.4360'), Decimal('1.000'), Decimal('1.000'), Decimal('1.000'), Decimal('1.000')], [20190512, Decimal('0.7051'), Decimal('0.7051'), Decimal('0.7051'), Decimal('0.7051'), Decimal('120.8055'), Decimal('120.8055'), Decimal('120.8055'), Decimal('120.8055'), Decimal('1.000'), Decimal('1.000'), Decimal('1.000'), Decimal('1.000')], [20190513, Decimal('-0.6239'), Decimal('-0.8166'), Decimal('-0.1038'), Decimal('0.9201'), Decimal('44.8110'), Decimal('21.3391'), Decimal('108.1621'), Decimal('232.8787'), Decimal('-70512.000'), Decimal('-70512.000'), Decimal('-70512.000'), Decimal('-70512.000')], [20190514, Decimal('-0.8928'), Decimal('0.8671'), Decimal('0.1946'), Decimal('0.2116'), Decimal('3.9109'), Decimal('40.7093'), Decimal('129.4050'), Decimal('282.3674'), Decimal('0.000'), Decimal('0.000'), Decimal('0.000'), Decimal('0.000')], [20190515, Decimal('-0.8827'), Decimal('-0.9860'), Decimal('0.8293'), Decimal('0.3085'), Decimal('-0.4240'), Decimal('-0.4161'), Decimal('237.5499'), Decimal('369.7862'), Decimal('0.000'), Decimal('0.000'), Decimal('0.000'), Decimal('0.000')], [20190516, Decimal('-0.0298'), Decimal('0.9170'), Decimal('-0.6465'), Decimal('0.7484'), Decimal('-0.4412'), Decimal('0.1193'), Decimal('83.3274'), Decimal('647.2826'), Decimal('0.000'), Decimal('0.000'), Decimal('0.000'), Decimal('0.000')], [20190517, Decimal('-0.9996'), Decimal('0.9516'), Decimal('-0.3455'), Decimal('0.8825'), Decimal('-0.9998'), Decimal('1.1844'), Decimal('54.1923'), Decimal('1219.3920'), Decimal('0.000'), Decimal('0.000'), Decimal('0.000'), Decimal('0.000')], [20190518, Decimal('-0.5253'), Decimal('-0.7711'), Decimal('-0.7087'), Decimal('0.6023'), Decimal('-0.9999'), Decimal('-0.5000'), Decimal('15.0775'), Decimal('1954.4341'), Decimal('0.000'), Decimal('0.000'), Decimal('0.000'), Decimal('0.000')], [20190519, Decimal('-0.7889'), Decimal('-0.7153'), Decimal('-0.1698'), Decimal('0.4601'), Decimal('-1.0000'), Decimal('-0.8576'), Decimal('12.3475'), Decimal('2854.1293'), Decimal('0.000'), Decimal('0.000'), Decimal('0.000'), Decimal('0.000')], [20190520, Decimal('0.3527'), Decimal('-0.6421'), Decimal('-0.0596'), Decimal('0.1656'), Decimal('-1.0000'), Decimal('-0.9490'), Decimal('11.5520'), Decimal('3326.9387'), Decimal('0.000'), Decimal('0.000'), Decimal('0.000'), Decimal('0.000')], [20190521, Decimal('-0.6507'), Decimal('0.9715'), Decimal('-0.9681'), Decimal('-0.6507'), Decimal('-1.0000'), Decimal('-0.8995'), Decimal('-0.5996'), Decimal('1161.4490'), Decimal('0.000'), Decimal('0.000'), Decimal('0.000'), Decimal('0.000')], [20190522, Decimal('0.8634'), Decimal('-0.5060'), Decimal('0.7588'), Decimal('0.5757'), Decimal('-1.0000'), Decimal('-0.9504'), Decimal('-0.2958'), Decimal('1830.6709'), Decimal('0.000'), Decimal('0.000'), Decimal('0.000'), Decimal('0.000')], [20190523, Decimal('0.3794'), Decimal('-0.1671'), Decimal('0.9939'), Decimal('-0.2633'), Decimal('-1.0000'), Decimal('-0.9587'), Decimal('0.4041'), Decimal('1348.3920'), Decimal('0.000'), Decimal('0.000'), Decimal('0.000'), Decimal('0.000')], [20190524, Decimal('0.3330'), Decimal('-0.5891'), Decimal('0.8229'), Decimal('0.9204'), Decimal('-1.0000'), Decimal('-0.9830'), Decimal('1.5595'), Decimal('2590.3724'), Decimal('0.000'), Decimal('0.000'), Decimal('0.000'), Decimal('0.000')], [20190525, Decimal('0.1158'), Decimal('0.4900'), Decimal('-0.0277'), Decimal('0.9501'), Decimal('-1.0000'), Decimal('-0.9747'), Decimal('1.4886'), Decimal('5052.4353'), Decimal('0.000'), Decimal('0.000'), Decimal('0.000'), Decimal('0.000')], [20190526, Decimal('0.9194'), Decimal('0.0096'), Decimal('0.6319'), Decimal('0.7820'), Decimal('-1.0000'), Decimal('-0.9745'), Decimal('3.0611'), Decimal('9004.2217'), Decimal('0.000'), Decimal('0.000'), Decimal('0.000'), Decimal('0.000')], [20190527, Decimal('-0.3499'), Decimal('0.5826'), Decimal('0.0312'), Decimal('-0.3674'), Decimal('-1.0000'), Decimal('-0.9596'), Decimal('3.1878'), Decimal('5695.7032'), Decimal('0.000'), Decimal('0.000'), Decimal('0.000'), Decimal('0.000')], [20190528, Decimal('0.7359'), Decimal('0.8311'), Decimal('-0.4851'), Decimal('-0.6172'), Decimal('-1.0000'), Decimal('-0.9260'), Decimal('1.1563'), Decimal('2179.6980'), Decimal('0.000'), Decimal('0.000'), Decimal('0.000'), Decimal('0.000')], [20190529, Decimal('0.7463'), Decimal('0.1031'), Decimal('0.4039'), Decimal('-0.5450'), Decimal('-1.0000'), Decimal('-0.9184'), Decimal('2.0272'), Decimal('991.2176'), Decimal('0.000'), Decimal('0.000'), Decimal('0.000'), Decimal('0.000')], [20190530, Decimal('-0.5226'), Decimal('0.6384'), Decimal('-0.2246'), Decimal('-0.9072'), Decimal('-1.0000'), Decimal('-0.8663'), Decimal('1.3473'), Decimal('91.0778'), Decimal('0.000'), Decimal('0.000'), Decimal('0.000'), Decimal('0.000')], [20190531, Decimal('0.6348'), Decimal('0.5334'), Decimal('0.9703'), Decimal('-0.3294'), Decimal('-1.0000'), Decimal('-0.7950'), Decimal('3.6249'), Decimal('60.7474'), Decimal('0.000'), Decimal('0.000'), Decimal('0.000'), Decimal('0.000')]]
 Traceback (most recent call last):
-  File "analysis_cnpsec.py", line 373, in test_normal
+  File ".\analysis_cnpsec.py", line 401, in test_normal
     count=len(sql_result_dealed), is_timestamp=False, is_cumulative_rate=True)
-  File "analysis_cnpsec.py", line 430, in _checking
+  File ".\analysis_cnpsec.py", line 458, in _checking
     self.assertEqual(params.get("count"), interface_result.get("count"), msg=msg_model)
 AssertionError: 28 != 29 : 
 SQL is
