--- a/utils/result_chasing.html
+++ b/utils/result_chasing.html
@@ -189,9 +189,9 @@ function showOutput(id, name) {
 
 <div class='heading'>
 <h1>测试报告</h1>
-<p class='attribute'><strong>Start Time:</strong> 2020-05-14 17:37:20</p>
-<p class='attribute'><strong>Duration:</strong> 0:00:00.229000</p>
-<p class='attribute'><strong>Status:</strong> Pass 8 Error 2</p>
+<p class='attribute'><strong>Start Time:</strong> 2020-05-14 18:15:21</p>
+<p class='attribute'><strong>Duration:</strong> 0:00:00.400000</p>
+<p class='attribute'><strong>Status:</strong> Pass 8 Error 3</p>
 
 <p class='description'>单元测试报告：</p>
 </div>
@@ -431,12 +431,61 @@ Exception: init_date: is not a dict. The type is &lt;class 'str'&gt;.
     </td>
 </tr>
 
+<tr class='errorClass'>
+    <td>GetNewStockPageUserIntervalData</td>
+    <td>1</td>
+    <td>0</td>
+    <td>0</td>
+    <td>1</td>
+    <td><a href="javascript:showClassDetail('c11',1)">Detail</a></td>
+</tr>
+
+<tr id='ft11.1' class='none'>
+    <td class='errorCase'><div class='testcase'>test_normal</div></td>
+    <td colspan='5' align='center'>
+
+    <!--css div popup start-->
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_ft11.1')" >
+        error</a>
+
+    <div id='div_ft11.1' class="popup_window">
+        <div style='text-align: right; color:red;cursor:pointer'>
+        <a onfocus='this.blur();' onclick="document.getElementById('div_ft11.1').style.display = 'none' " >
+           [x]</a>
+        </div>
+        <pre>
+        
+ft11.1: Traceback (most recent call last):
+  File "analysis_fortune.py", line 366, in test_normal
+    list_name=["stock_content", "stock_data_list", "bond_content", "bond_data_list"])
+  File "analysis_fortune.py", line 395, in checking
+    list_name=params.get("list_name"))
+  File "D:\scripts\git\unittests\utils\business\business.py", line 104, in deal
+    raise Exception("{0}: is not a dict. The type is {1}. ".format(each_info, type(each_info)))
+Exception: stock_name: is not a dict. The type is &lt;class 'str'&gt;. 
+Traceback (most recent call last):
+  File "analysis_fortune.py", line 366, in test_normal
+    list_name=["stock_content", "stock_data_list", "bond_content", "bond_data_list"])
+  File "analysis_fortune.py", line 395, in checking
+    list_name=params.get("list_name"))
+  File "D:\scripts\git\unittests\utils\business\business.py", line 104, in deal
+    raise Exception("{0}: is not a dict. The type is {1}. ".format(each_info, type(each_info)))
+Exception: stock_name: is not a dict. The type is &lt;class 'str'&gt;. 
+
+
+        </pre>
+    </div>
+    <!--css div popup end-->
+
+    </td>
+</tr>
+
 <tr id='total_row'>
     <td>Total</td>
-    <td>10</td>
+    <td>11</td>
     <td>8</td>
     <td>0</td>
-    <td>2</td>
+    <td>3</td>
     <td>&nbsp;</td>
 </tr>
 </table>
